--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run tests
       run: |
-        cd src && python -m pytest ../tests/ -v
+        python -m pytest tests/ -v
 
   train_and_quantize:
     runs-on: ubuntu-latest
@@ -48,35 +48,25 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Create models directory
-      run: |
-        mkdir -p models
-
     - name: Train model
       run: |
-        cd src
-        python train.py
+        python src/train.py
 
     - name: Quantize model
       run: |
-        cd src
-        python quantize.py
+        python src/quantize.py
 
-    - name: Verify artifacts exist
+    - name: Verify model artifacts
       run: |
-        echo "Contents of models directory:"
-        ls -la models/
-        echo "Current working directory:"
-        pwd
-        echo "All files in current directory:"
-        find . -name "*.joblib" -type f
+        echo "Artifacts in models/:"
+        ls -la src/models/
+        find src/models/ -name "*.joblib"
 
     - name: Upload model artifacts
       uses: actions/upload-artifact@v4
       with:
         name: model-artifacts
-        path: |
-          src/models/
+        path: src/models/
         retention-days: 30
         if-no-files-found: error
 
@@ -100,28 +90,24 @@ jobs:
         pip install -r requirements.txt
 
     - name: Create models directory
-      run: |
-        mkdir -p models
+      run: mkdir -p src/models/
 
     - name: Download model artifacts
       uses: actions/download-artifact@v4
       with:
         name: model-artifacts
-        path: models/
+        path: src/models/
 
     - name: Verify downloaded artifacts
       run: |
         echo "Downloaded artifacts:"
-        ls -la models/
-        echo "Checking for required model files:"
-        test -f models/linear_regression_model.joblib && echo "Main model found" || echo "Main model missing"
-        test -f models/unquant_params.joblib && echo "Unquant params found" || echo "Unquant params missing"
-        test -f models/quant_params.joblib && echo "Quant params found" || echo "Quant params missing"
+        ls -la src/models/
+        test -f src/models/linear_regression_model.joblib && echo "Model found" || (echo "Model missing" && exit 1)
+        test -f src/models/unquant_params.joblib && echo "Unquant params found" || echo "Unquant params missing"
+        test -f src/models/quant_params.joblib && echo "Quant params found" || echo "Quant params missing"
 
     - name: Build Docker image
-      run: |
-        docker build -t mlops-linear-regression .
+      run: docker build -t mlops-linear-regression .
 
     - name: Test Docker container
-      run: |
-        docker run --rm mlops-linear-regression
+      run: docker run --rm mlops-linear-regression
